tests/semantic/recursive_unions2/recursive_unions2.dl
// Souffle - A Datalog Compiler
// Copyright (c) 2020, The Souffle Developers. All rights reserved
// Licensed under the Universal Permissive License v 1.0 as shown at:
// - https://opensource.org/licenses/UPL
// - <souffle root>/licenses/SOUFFLE-UPL.txt

//
// Recursive Unions 2
//
// Check if recursive unions fail correctly.
// Issue #1432
//

.type A = A

.type U = symbol | U

.type C = symbol | D
.type D = symbol | C


.type E = F
.type F = G
.type G = H
.type H = F

.decl R(u : U, c : C)
R("a", "b").
.output R(IO=stdout)
